<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="elections_informations">Elections Informations</string>
    <string name="corresponding_address">Corresponding Address</string>
    <string name="use_my_location">Use My Location</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="twitter_url">Twitter URL</string>
    <string name="site_url">Site URL</string>
    <string name="facebook_url">Facebook URL</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="my_representatives">My Representatives</string>

    <!-- TODO: Add necessary string values -->

</resources>
