<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/profile_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            tools:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/officeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:maxLines="1"
            android:text="@{representative.office.name}"
            android:textSize="@dimen/textsize_15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_picture"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President of The United States" />

        <TextView
            android:id="@+id/representativeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{representative.official.name}"
            android:textSize="@dimen/textsize_15sp"
            app:layout_constraintStart_toStartOf="@id/officeName"
            app:layout_constraintTop_toBottomOf="@id/officeName"
            tools:text="Joe Biden" />

        <TextView
            android:id="@+id/partyName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{representative.official.party}"
            android:textSize="@dimen/textsize_15sp"
            app:layout_constraintStart_toStartOf="@id/officeName"
            app:layout_constraintTop_toBottomOf="@id/representativeName"
            tools:text="Democratic Party" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="@dimen/icon_dimen_representative_list"
            android:layout_height="@dimen/icon_dimen_representative_list"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="@dimen/small_spacing"
            android:contentDescription="@string/twitter_url"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/facebookIcon"
            app:layout_constraintTop_toBottomOf="@id/representativeName" />

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="@dimen/icon_dimen_representative_list"
            android:layout_height="@dimen/icon_dimen_representative_list"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/site_url"
            android:src="@drawable/ic_www"
            app:layout_constraintBottom_toBottomOf="@+id/twitterIcon"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintStart_toEndOf="@id/partyName" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="@dimen/icon_dimen_representative_list"
            android:layout_height="@dimen/icon_dimen_representative_list"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/facebook_url"
            android:src="@drawable/ic_facebook"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintStart_toEndOf="@+id/wwwIcon"
            app:layout_constraintTop_toTopOf="@+id/twitterIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>